--- a/Blog/css/arquivos1.css
+++ b/Blog/css/arquivos1.css
@@ -46,3 +46,8 @@ h2{
     text-align: justify;
     padding: 15px;
 }
+
+.ref{
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
