--- a/Blog/css/arquivo3.css
+++ b/Blog/css/arquivo3.css
@@ -8,7 +8,9 @@ h2{
 
 p{
     text-align: justify;
-    padding-right: 15px;
+    padding-right: 18px;
+    padding-left: 10px;
+    padding-top: 15px;
 }
 
 .container9{
@@ -17,12 +19,12 @@ p{
 }
 
 .img1{
-    margin-top: 60px;
+    margin-top: 50px;
     margin-right: 35px;
     
 }
 
 .img2{
-    margin-top: 0px;
-    margin-left: 750px;
+    margin-top: -100px;
+    margin-left: 760px;
 }
