--- a/Blog/css/arquivos1.css
+++ b/Blog/css/arquivos1.css
@@ -48,6 +48,7 @@ h2{
 }
 
 .ref{
+    margin-left: 30px;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
