--- a/FlexBoxAtividade/style.css
+++ b/FlexBoxAtividade/style.css
@@ -39,12 +39,6 @@ body, html {
 
 }
 
-
-
-
-
-
-
 .container {
     display: flex;
     flex-direction: column;
@@ -68,6 +62,8 @@ body, html {
     padding: 30px;
 }
 
+
+
 .containerArtigo1 {
     padding-top: 20px;
     display: flex;
@@ -81,7 +77,27 @@ body, html {
 }
 
 .imagensArtigos img {    
+    width: 200px;
+    height: 200px;
+    object-fit: cover; /* Opcional, mantém o aspecto proporcional */
     border-radius: 10px;
+}
+
+.LMartigos{
+    font-family:sans-serif;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 15px;
+    max-width: 120px;
+    text-align: center;
+    margin: auto;
+    margin-top: 30px;
+    background-color: rgb(156, 110, 196);
+    transition: background-color 0.3s ease; /* Suave transição da cor */
+}
+
+.LMartigos:hover {
+    background-color: #ba90e0; 
 }
 
 .artigos {
@@ -91,30 +107,22 @@ body, html {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.LMartigos{
-    font-family:sans-serif;
-    border-radius: 5px;
-    padding: 15px;
-    max-width: 120px;
-    text-align: center;
-    margin: auto;
-    margin-top: 30px;
-    background-color: rgb(156, 110, 196);
-}
 
  a{
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
 
-
-
-
-
-
 .sidebar {
     display: flex;
     gap: 20px;
+}
+
+.red {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    background-color: rgb(187, 159, 233);
+    color: white;
 }
 
 .main-content, .sidebar {
@@ -130,11 +138,10 @@ body, html {
     flex: 1 1 55%;  
 }
 
-.red {
-    background-color: red;
-    color: white;
-    padding: 30px;
+.paginasAdicionais{
+    display: flex;
 }
+
 
 
 @media (min-width: 576px) {
@@ -173,6 +180,4 @@ body, html {
         flex: 3;
     } 
 }
-
-
 
