--- a/FlexBoxAtividade/style.css
+++ b/FlexBoxAtividade/style.css
@@ -11,13 +11,13 @@ body, html {
 
     header{
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: center;
     }
     
     .container2{
         display: flex;
         flex-direction: row;
+        justify-content: center;
     }
     
     h1{
@@ -171,8 +171,39 @@ a{
     flex: 1 1 55%;  
 }
 
-
 @media (min-width: 576px) {
+    body {
+        background-color: #e0d0ee;
+    }
+    header{
+        display: flex;
+        justify-content: center;
+
+    }
+    
+    .container2{
+        display: flex;
+        flex-direction: row;
+    }
+    
+    h1{
+        font-size: 40px;
+        padding-top: 20px;
+        padding-left: 30px;
+        color: rgb(61, 36, 119);
+    }
+    
+    .imagemHeader1{
+        padding-top: 40px;
+        padding-left: 20px;
+    }
+    
+    .imagemHeader2{
+        padding-top: 50px;
+        padding-left: 50px;
+    }
+
+
     .container {
         flex-wrap: wrap;
     }
