--- a/media/css/artigo3.css
+++ b/media/css/artigo3.css
@@ -82,7 +82,6 @@ h2{
 
 .box  {
     text-align: center;
-    font-size: 20px;
 }
 
 .main-content .box {
@@ -168,4 +167,12 @@ h2{
         color: #f8f6fa;
     }
 
+    .blue {
+        padding: 0 20px;
+        background-color: rgb(220, 205, 235);
+        color: rgb(15, 15, 15);
+        text-align: justify;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: px;
+    }
 }
