--- a/AtividadeKristian/style.css
+++ b/AtividadeKristian/style.css
@@ -42,15 +42,20 @@
     position: relative;
     align-items: center;
     margin: 100px 10px;
-    padding: 130px;
+    padding: 100px;
     border-radius: 20px;
     background-color: black;
 }
 
 .container3 {
+    margin-top: -350px;
     display: flex;
-    justify-content: center;
+    text-align: center;
     flex-direction: row;
-   /* position: absolute;*/
+    position: absolute;
     padding-top: -20px;
+}
+ 
+img{
+    text-align: center;
 }
