--- a/AtividadeKristian/style.css
+++ b/AtividadeKristian/style.css
@@ -422,6 +422,23 @@ a{
     .imgPC{
         display: flex;
         width: 250px;
+        padding-left: 70px;
     }
+
+    .container4{
+        margin-left: 80px;
+        margin-right: 80px;
+        padding-left: 5px;
+        padding-top: 60px ;
+        border-radius: 30px;
+        padding-bottom: 20px;
+        display: flex;
+    }
+
+    .container42{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
 }
 
