--- a/AtividadeKristian/style.css
+++ b/AtividadeKristian/style.css
@@ -428,16 +428,29 @@ a{
     .container4{
         margin-left: 80px;
         margin-right: 80px;
-        padding-left: 5px;
         padding-top: 60px ;
         border-radius: 30px;
-        padding-bottom: 20px;
+        padding-bottom: 20PX;
         display: flex;
     }
 
     .container42{
         padding-left: 30px;
         padding-right: 30px;
+    }
+
+    .TituloFooter{
+        font-size: 60px;
+        padding-left: 20px;
+        max-width: 370px;
+    }
+
+    .containerf2{
+        flex: 3;
+    }
+    .containerf{
+        display: flex;
+        flex-direction: row;
     }
 
 }
